Revision history for Perl extension Wx.

0.85

0.84  Sun Jun 29 21:43:31 CEST 2008
	- Workaround for crash on exit on DEBUGGING Perls
	  (mostly affects Fedora users)

0.83  Mon May 19 22:37:36 CEST 2008
	- Avoid 'deep recursion' errors and eating all available
	  memory when loading wxPerl fails.
	- Handle INSTALL_BASE under Mac OS X.

0.82  Thu Mar 27 00:45:59 CET 2008
	- Fixed running Makefile.PL in absence of Alien::wxWidgets.
	- Renamed wx_xspp.pl and wx_overload.pl to
	  wxperl_xspp and wxperl_overload, to comply
	  with Debian policy.

0.81  Sat Jan 19 17:36:33 CET 2008
	- Almost completed the interface of wxStyledTextCtrl.
	- Added wxBitmapToggleButton and wxSVGFileDC (2.9).
	- Added wxWrapSizer (2.9).
	- Added wxNotificationMessage (2.9).
	- Added wxMirrorDC and wxDCClipper.
	- Partially completed interface to wxDataViewCtrl (2.9).

0.80  Tue Nov  6 23:12:53 CET 2007
	- Build fixes for Windows (both dmake and nmake).
	- Prototype implementation of wxVariant and wxDataViewCtrl (2.9).

0.79  Thu Oct 18 00:52:35 CEST 2007
	- Windows compilation fixes (thanks to John Kizlyk for the report).
	- Try to handle gracefully the absence of Alien::wxWidgets under
	  Mac OS X.
	- Added Alien::wxWidgets to configure_requires.

0.78  Mon Oct 15 23:54:13 CEST 2007
	- Added wxRichTextBuffer and wxRichTextFileHandler,
	  wxRichTextHTMLHandler, wxRichTextXMLHandler (2.7).
	- Added wxSymbolPickerDialog (2.7).
	- Added wxDisplay, wxGenericDirCtrl.
	- Added wxFileCtrl (2.9).
	- Added wxStandardPaths (2.6).
	- Wrapped the remaining wxGraphics* classes (2.7).

0.77  Thu Aug 23 21:59:25 CEST 2007
	- Added wxGraphicsContext (2.7) and some related classes
	  (patch by Klaas Hartmann).
	- Added wxCollapsiblePane (2.7).
	- Added wxBitmapComboBox (2.7).
	- Added wxAnimation and wxAnimationCtrl (2.7).
	- Added wxPropertySheetDialog (2.6).
	- Added wxPasswordEntryDialog (2.6).
	- Added wxCommand and wxCommandProcessor.
	- Added wxHScrolledWindow and wxHVScrolledWindow and