@@ -1,6 +1,7 @@
 Revision history for Perl extension Wx.
 
 0.85
+	- Compilation fixes for wxMotif (patch by Marek Rouchal).
 
 0.84  Sun Jun 29 21:43:31 CEST 2008
 	- Workaround for crash on exit on DEBUGGING Perls
